--- a/2010/thesis/defense_response.tex
+++ b/2010/thesis/defense_response.tex
@@ -25,7 +25,7 @@
 
 %----------------------------------------------------------------------------------------------------
 
-\hbox{}\vfil
+\hbox{}\vfil\footline={}
 \title{Response to Referees' Questions and Comments}
 
 \newpage%------------------------------------------------------------------------------------------
@@ -158,13 +158,17 @@
 \centerline{\bf ``Eq.~(3.31)'' : resolution of RP system}
 
 \> Eq.~(3.31) : estimate of angular resolution for elastic reconstruction
+\>> two contributions: from beam-divergence ($\si_{\rm B}$) and strip pitch ($\si_{\rm R}$)
+
 $$
 	\si^2(\th_x^*) =  \si_{\rm B}^2 + \si_{\rm R}^2\ ,\qquad
 	\si_{\rm B} = {\sqrt{N_{\rm R}^2 + N_{\rm L}^2} \over N_{\rm R} + N_{\rm L}}\, \si_{\th^*}\ ,\qquad
 	\si_{\rm R} = {1\over L_x} {1\over \sqrt{N_{\rm R} + N_{\rm L}}}\, \si_{\rm P}\ ,
 $$
 
-\> $N_{\rm R}$, $N_{\rm L}$ represent the numbers of RPs in the right/left arm involved in the measurement
+\>> $N_{\rm R}$, $N_{\rm L}$ represent the numbers of RPs in the right/left arm involved in the measurement
+
+\bls
 
 \> resolution of a system of RPs
 \>> RPs far (meters) from each other $\Rightarrow$ no hit position correlation due to the strip pitch
